# celery_redis_fastapi_dummy

./: .gitignore  README.md  log_celery.txt  pyproject.toml  run.sh  stop.sh
src/: celery_app.py  celery_worker.py  config.py  main.py  tasks.py
