[project]
name = "celery-redis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "black>=25.11.0",
    "celery>=5.6.0",
    "fastapi>=0.123.5",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "statistics>=1.0.3.5",
    "uvicorn>=0.38.0",
]
